style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
body {
	background-color: #1e2434;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
}
.calculator {
	background-color: #213037;
	width: 490px;
	padding: 20px;
	border: 1px solid #000000;
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	-ms-border-radius: 10px;
	-o-border-radius: 10px;
	box-shadow: 0px 0px 0px 10px #666;
}
.output {
	background-color: #b5bab4;
	color: #2e3638;
	padding: 5px;
	font-size: 2rem;
	width: 100%;
	height: 80px;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-ms-border-radius: 5px;
	-o-border-radius: 5px;
	display: flex;
	justify-content: flex-end;
	align-items: center;
	letter-spacing: 0.2rem;
	word-break: break-all;
}

.calculator-buttons {
	margin-top: 10px;
}
button {
	border: none;
	color: #f9ffff;
	cursor: pointer;
	outline: none;
	text-align: center;
}
button:hover {
	background-color: rgb(9, 87, 87);
}
.complex-operator {
	background-color: #212f3c;
	box-shadow: 0px 0px 2px 0px rgba(233, 231, 231, 0.9);
	width: 53px;
	height: 25px;
	margin: 8px 3px;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-ms-border-radius: 5px;
	-o-border-radius: 5px;
}
.basic-characters {
	padding: 0 5px;
}

.basic {
	background-color: #5d6886;
	font-size: 1.2rem;
	width: 63px;
	height: 30px;
	margin: 10px;
	border-bottom-left-radius: 8px;
	border-bottom-right-radius: 8px;
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
}
.pry-btn {
	background-color: #c14158;
}

/*Media query */
@media (max-width: 450px) {
	.calculator {
		width: 90%;
	}
	.complex-operator {
		width: 36px;
	}
	.basic {
		width: 55px;
	}
}

/* for pixel and iphone6/7/8 plus phone */
@media (max-width: 414px) {
	.basic {
		width: 53px;
		padding: 0;
		margin: 10px 3px;
	}
}

@media (max-width: 375px) {
	.calculator {
		width: 95%;
	}
	.complex-operator {
		width: 33px;
	}
	.basic {
		width: 48px;
		padding: 0;
		margin: 10px 3px;
	}
}

@media (max-width: 320px) {
	.calculator {
		width: 98%;
	}
	.complex-operator {
		width: 29px;
	}
	.basic {
		width: 43px;
		padding: 0;
		margin: 10px 3px;
	}
}

